force-app/main/default/objects/Training_Enrollment__c/Training_Enrollment__c.object-meta.xml
<CustomObject>
    <description>Objet pour suivre l&apos;inscription des employee aux formations</description>
    <label>Training Enrollment</label>
    <nameField>
        <displayFormat>ENR-{0000}</displayFormat>
        <label>Training Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>