force-app/main/default/objects/Training_Enrollment__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employe__c</referenceTo>
    <relationshipLabel>Training Enrollments</relationshipLabel>
    <relationshipName>Training_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>